--- a/js/index.html
+++ b/js/index.html
@@ -8,7 +8,7 @@
     <!-- Latest compiled and minified CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="../css/style.css">
 
 <!-- Latest compiled JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -19,7 +19,7 @@
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
     <div class="container-fluid justify-content-end">
         <ul class="nav">
-            <li><a href=""><i class="fa-brands fa-instagram"></i> Usuario</a></li>
+            <li><a class="" href=""><i class="fa-brands fa-instagram"></i> Usuario</a></li>
         </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -46,26 +46,26 @@
     <i class="fa-solid fa-user"></i><!-- Latest compiled and minified CSS -->
     <div class="container">
         <div class="row">
-            <div class="col-cm-2">
-                <div class="row">
+            <div class="col-cm-2 col-izq">
+                <div class="row text-center perfil">
                     <div class="col-sm-12">
-                        <img src="../img/img/descarga.jfif" alt="">
+                        <img  class="avatar mt-3"  src="../img/img/descarga.jfif" alt="">
                     </div>
                         <div class="col-sm-12">
-                            <h6>bienvenido: panshoots</h6>
+                            <h6 class="colorblanco">bienvenido: panshoots</h6>
                             
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12"> 
                             <ul>
-                                <li><a href=""><i class="fa-solid fa-user"></i> Usuario</a></li>
-                                <li><a href=""><i class="fa-solid fa-users"></i> Usuarios</a></li>
-                                <li><a href=""><i class="fa-solid fa-car"></i> Autos </a> </li>
-                                <li><a href=""><i class="fa-solid fa-trash"></i> Eliminar</a></li>
-                                <li><a href=""><i class="fa-solid fa-edit"></i> Modificar</a></li>
-                                <li><a href=""><i class="fa-solid fa-add"></i> Agregar</a></li>
-                                <li><a href=""><i class="fa-solid fa-address-card"></i> Ver datos</a></li>
+                                <li><a class="colorblanco" href=""><i class="fa-solid fa-user"></i> Usuario</a></li>
+                                <li><a class="colorblanco" href=""><i class="fa-solid fa-users"></i> Usuarios</a></li>
+                                <li><a class="colorblanco" href=""><i class="fa-solid fa-car"></i> Autos </a> </li>
+                                <li><a class="colorblanco" href=""><i class="fa-solid fa-trash"></i> Eliminar</a></li>
+                                <li><a class="colorblanco" href=""><i class="fa-solid fa-edit"></i> Modificar</a></li>
+                                <li><a class="colorblanco" href=""><i class="fa-solid fa-add"></i> Agregar</a></li>
+                                <li><a class="colorblanco" href=""><i class="fa-solid fa-address-card"></i> Ver datos</a></li>
                             </ul>
                         </div>
 
